<resources>
    <string name="app_name">omoshiroi</string>
    <string name="noteTitleEditTextHint">note title</string>
    <string name="noteTextEditTextHint">note text</string>
    <string name="toolbarAppName">-##- OMOSHIROI -##-</string>
    <string name="noteTypeSelectorSimple">SIMPLE</string>
    <string name="noteTypeSelectorPinned">PINNED</string>
    <string name="noteTypeSelectorTerminal">TERMINAL</string>
    <string name="randomText">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
        of Lorem Ipsum.
    </string>
</resources>
