<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorBlack"
        android:elevation="4dp"
        android:id="@+id/toolbar"
        android:layout_height="56dp"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:text="@string/toolbarAppName"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:background="@color/colorBlack"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_info_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/noteTitleEditTextHint"
                android:id="@+id/noteTitleEditTextLayout"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                app:boxBackgroundColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:fontFamily="monospace"
                    android:gravity="start|top"
                    android:id="@+id/noteTitleEditText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:background="@drawable/note_type_switch_layout"
                android:id="@+id/noteTypeSelector"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteTitleEditTextLayout">

                <TextView
                    android:background="@drawable/note_type_left_button_white"
                    android:gravity="center"
                    android:id="@+id/noteTypeSelectorSimple"
                    android:layout_height="wrap_content"
                    android:layout_width="84dp"
                    android:padding="8dp"
                    android:text="@string/noteTypeSelectorSimple"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:background="@drawable/note_type_right_button_white"
                    android:gravity="center"
                    android:id="@+id/noteTypeSelectorPinned"
                    android:layout_height="wrap_content"
                    android:layout_width="84dp"
                    android:padding="8dp"
                    android:text="@string/noteTypeSelectorPinned"
                    android:textColor="@color/colorBlack"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/noteTextEditTextHint"
                android:id="@+id/noteTextEditTextLayout"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                app:boxBackgroundColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteTypeSelector">

                <com.google.android.material.textfield.TextInputEditText
                    android:fontFamily="monospace"
                    android:gravity="start|top"
                    android:id="@+id/noteTextEditText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:minLines="8"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>